--- a/package.json
+++ b/package.json
@@ -12,20 +12,28 @@
     ]
   },
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
     "@material/button": "^1.0.1",
     "@material/drawer": "^1.0.1",
     "@material/elevation": "^1.0.0",
+    "@material/fab": "^1.1.1",
     "@material/image-list": "^1.0.0",
+    "@material/layout-grid": "^0.41.0",
     "@material/list": "^1.0.1",
     "@material/ripple": "^1.0.1",
     "@material/textfield": "^1.0.1",
+    "@material/top-app-bar": "^1.0.1",
     "@material/typography": "^1.0.0",
+    "aws-s3": "^2.0.5",
     "axios": "^0.18.0",
     "classnames": "^2.2.5",
     "dart-sass": "^1.17.3",
     "extract-loader": "^3.1.0",
     "fibers": "^3.1.1",
     "jwt-decode": "^2.2.0",
+    "material-icons": "^0.3.1",
+    "material-ui-dropzone": "^2.3.4",
     "moment": "^2.22.0",
     "node-sass": "^4.11.0",
     "node-sass-import": "^2.0.1",
