--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "fibers": "^3.1.1",
     "jwt-decode": "^2.2.0",
     "material-icons": "^0.3.1",
+    "material-ui-carousel": "^1.0.0",
     "material-ui-dropzone": "^2.3.4",
     "moment": "^2.22.0",
     "node-sass": "^4.11.0",
@@ -47,7 +48,9 @@
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.5",
     "redux-thunk": "^2.2.0",
-    "sass-loader": "^7.1.0"
+    "sass-loader": "^7.1.0",
+    "uuid": "^3.3.2",
+    "yargs": "^13.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -70,8 +73,8 @@
     "babel-loader": "^8.0.5",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.1.0"
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.1",
+    "webpack-dev-server": "^3.3.1"
   }
 }
