--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@material/layout-grid": "^0.41.0",
     "@material/list": "^1.0.1",
     "@material/ripple": "^1.0.1",
+    "@material/slider": "^1.1.0",
     "@material/textfield": "^1.0.1",
     "@material/top-app-bar": "^1.0.1",
     "@material/typography": "^1.0.0",
@@ -71,8 +72,11 @@
     "@babel/preset-env": "^7.4.2",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
+    "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^4.6.0",
+    "url-loader": "^1.1.2",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1",
     "webpack-dev-server": "^3.3.1"
